@@ -63,8 +63,8 @@ export default AbstractController.extend({
     var visibleColumnIDs = this.get("localStorage").get(this.get("storageID")) || {};
 
     this.get('columns').forEach(function (config) {
-      if(visibleColumnIDs[config.id] !== false) {
-        visibleColumnIDs[config.id] = true;
+      if(visibleColumnIDs[config.id] === undefined) {
+        visibleColumnIDs[config.id] = !Ember.get(config, "hiddenByDefault");
       }
     });
 
