@@ -58,7 +58,7 @@
   },
   "dependencies": {
     "em-helpers": "0.8.0",
-    "em-table": "0.4.0",
+    "em-table": "0.6.0",
     "em-tgraph": "0.0.10"
   }
 }
