@@ -193,6 +193,7 @@ ALL CHANGES:
   TEZ-3594. Tez UI: Graphical view tooltip issues
   TEZ-3598. Tez UI: Text formatting changes
   TEZ-3602. Tez UI: Query Name field is not required
+  TEZ-3615. Tez UI: Table changes
 
 Release 0.8.5: Unreleased
 
